[package]
name = "learn-redis-with-rust"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefabalik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.16.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
